--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "animessage"
-version = "0.15.23"
+version = "0.16.1"
 authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
 edition = "2018"
 
@@ -27,3 +27,4 @@ ctrlc = { version = "3.2.1", features = ["termination"] }
 smallvec = "1.7.0"
 envmnt = "0.9.1"
 term-table = "1.3.2"
+inquire = "0.2.1"
