--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "animessage"
-version = "0.19.10"
+version = "0.21.0"
 authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
 edition = "2018"
 
@@ -21,10 +21,10 @@ console_engine = "2.2.0"
 device_query = "0.2.8"
 webbrowser = "0.5.5"
 read_input = "0.8.6"
-asciify = "0.1.6"
 image = "0.23.14"
 ctrlc = { version = "3.2.1", features = ["termination"] }
 smallvec = "1.7.0"
 envmnt = "0.9.1"
 term-table = "1.3.2"
 inquire = "0.2.1"
+viuer = { version = "0.5.2", features = ["sixel"] }
