--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "animessage"
-version = "0.21.0"
+version = "0.22.0"
 authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
 edition = "2018"
 
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3.25"
-anyhow = "1.0.47"
+anyhow = "1.0.48"
 thiserror = "1.0.30"
 simple_logger = "1.13.0"
 log = "0.4.14"
@@ -27,4 +27,4 @@ smallvec = "1.7.0"
 envmnt = "0.9.1"
 term-table = "1.3.2"
 inquire = "0.2.1"
-viuer = { version = "0.5.2", features = ["sixel"] }
+viuer = "0.5.2"
