--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "animessage"
-version = "0.26.4"
+version = "0.27.0"
 authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
 edition = "2021"
 
@@ -27,4 +27,4 @@ smallvec = "1.7.0"
 envmnt = "0.9.1"
 term-table = "1.3.2"
 inquire = "0.2.1"
-viuer = "0.5.3"
+viuer = "0.5.3"  # DO NOT USE SIXEL. TOO REALISTIC.
