--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,22 @@
 [package]
 name = "animessage"
-version = "0.28.5"
+description = "Create animated messages for the terminal."
+version = "0.28.6"
 authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3.25"
-anyhow = "1.0.52"
+structopt = "0.3.26"
+anyhow = "1.0.53"
 thiserror = "1.0.30"
-simple_logger = "1.16.0"
+simple_logger = "2.1.0"
 log = "0.4.14"
-rodio = "0.14.0"
+rodio = "0.15.0"
 crossterm = "0.22.1"
 # rdev = "0.4.5"
-parking_lot = "0.11.2"
+parking_lot = "0.12.0"
 lazy_static = "1.4.0"
 console_engine = "2.2.0"
 device_query = "0.2.8"
@@ -23,8 +24,15 @@ webbrowser = "0.5.5"
 read_input = "0.8.6"
 image = "0.23.14"
 ctrlc = { version = "3.2.1", features = ["termination"] }
-smallvec = "1.7.0"
+smallvec = "1.8.0"
 envmnt = "0.9.1"
 term-table = "1.3.2"
 inquire = "0.2.1"
 viuer = "0.5.3"
+
+[[bin]]
+name = "animessage"
+
+[lib]
+crate-type = ["cdylib"]
+bench = false
