--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "animessage"
 description = "Create animated messages for the terminal."
-version = "0.28.8"
+version = "0.29.0"
 authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
 edition = "2021"
 
@@ -14,7 +14,6 @@ thiserror = "1.0.30"
 simple_logger = "2.1.0"
 log = "0.4.14"
 rodio = "0.15.0"
-crossterm = "0.22.1"
 # rdev = "0.4.5"
 parking_lot = "0.12.0"
 lazy_static = "1.4.0"
@@ -29,6 +28,8 @@ envmnt = "0.9.1"
 term-table = "1.3.2"
 inquire = "0.2.1"
 viuer = "0.5.3"
+console = "0.15.0"
+crossterm = "0.22.1"
 
 [[bin]]
 name = "animessage"
@@ -36,3 +37,5 @@ name = "animessage"
 [lib]
 crate-type = ["cdylib"]
 bench = false
+
+[features]
