--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "animessage"
 description = "Create animated messages for the terminal."
-version = "0.30.5"
+version = "0.30.6"
 authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
 edition = "2021"
 
@@ -38,4 +38,5 @@ name = "animessage"
 crate-type = ["cdylib"]
 bench = false
 
-[features]
+[profile.release]
+lto = true
