--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "animessage"
 description = "Create animated messages for the terminal."
-version = "0.30.8"
+version = "0.30.9"
 authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
 edition = "2021"
 
@@ -35,8 +35,11 @@ crossterm = "0.23.0"
 name = "animessage"
 
 [lib]
+name = "libanimessage"
 crate-type = ["cdylib"]
 bench = false
 
 [profile.release]
 lto = true
+overflow-checks = true
+
