--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "animessage"
 description = "Create animated messages for the terminal."
-version = "0.30.9"
+version = "0.30.10"
 authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
 edition = "2021"
 
@@ -19,7 +19,7 @@ parking_lot = "0.12.0"
 lazy_static = "1.4.0"
 console_engine = "2.3.0"
 device_query = "1.0.0"
-webbrowser = "0.5.5"
+webbrowser = "0.6.0"
 read_input = "0.8.6"
 image = "0.24.0"
 ctrlc = { version = "3.2.1", features = ["termination"] }
@@ -41,4 +41,4 @@ bench = false
 
 [profile.release]
 lto = true
-
+incremental = true
